# QtDorm

./: CMakeLists.txt  Dormitory.db  DormitoryBase.sln  README.md  createreportwindow.cpp  createreportwindow.h  createreportwindow.ui  kazak  main.cpp  optReport  resource.qrc  sonar-project.properties  долги ОПТ 01.12
DormitoryBase/: ClassDiagram.cd  Database.cpp  Database.h  DatabaseException.cpp  DatabaseException.h  DormitoryBase.cpp  DormitoryBase.vcxproj  DormitoryBase.vcxproj.filters  Header.h  List.cpp  List.h  Logic.cpp  Logic.h  Menu.cpp  Menu.h  Node.cpp  Node.h  Source.cpp  Student.cpp  Student.h  StudentList.cpp  StudentList.h  Students.db  main.cpp
DormitoryBase/SQLite/: sqlite3.lib
headers/: activitywindow.h  addstudentwidget.h  addstudentwindow.h  blockmanager.h  councilactivitywindow.h  createreportwidget.h  createreportwindow.h  database.h  inputexception.h  invalidnameexception.h  invalidnumberexception.h  invalidphonenumberexception.h  list.h  listiterator.h  logic.h  mainwindow.h  person.h  reportswindow.h  resident.h  studentcouncilmanager.h  studentinfowindow.h  studentresident.h  studentswidget.h  studentswindow.h  validateinput.h  voluntarysquadmanager.h  voluntarysquadwindow.h
source/: activitywindow.cpp  addstudentwidget.cpp  addstudentwidget.ui  addstudentwindow.cpp  addstudentwindow.ui  blockmanager.cpp  councilactivitywindow.cpp  createreportwidget.cpp  createreportwidget.ui  createreportwindow.cpp  database.cpp  inputexception.cpp  invalidnameexception.cpp  invalidnumberexception.cpp  invalidphonenumberexception.cpp  logic.cpp  mainwindow.cpp  mainwindow.ui  person.cpp  reportswindow.cpp  reportswindow.ui  resident.cpp  studentcouncilmanager.cpp  studentinfowindow.cpp  studentinfowindow.ui  studentresident.cpp  studentswidget.cpp  studentswidget.ui  studentswindow.cpp  studentswindow.ui  validateinput.cpp  voluntarysquadmanager.cpp  voluntarysquadwindow.cpp
ui/: activitywindow.ui  addstudentwindow.ui  councilactivitywindow.ui  mainwindow.ui  reportswindow.ui  studentswindow.ui  voluntarysquadwindow.ui
